--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <input type="submit" value="Grid it!" style="font-weight: bold;"/>
 
     </form>
-    <form action="/update_index.html" method="get">
+    <form action="/update_index" method="get">
         <input type="submit"  style="float: right;font-weight: bold" value="Update Index"/>
     </form>
 
